common/dex-auth/dex-crds/base/virtualservice.yaml
# This config is gated on kiali upgrade to 0.21 from 0.16 in istio 1.1.6:
# https://github.com/kiali/kiali/issues/1154
# https://github.com/istio/istio/issues/11131

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dex
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - port: 5556
      uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: dex.auth.svc.cluster.local
        port:
          number: 5556
